@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-18T16:27:09Z",
-  "count_outdated" : 463,
-  "uniques_outdated" : 264,
-  "count" : 489,
-  "uniques" : 283,
+  "timestamp" : "2022-08-19T01:39:05Z",
+  "count_outdated" : 466,
+  "uniques_outdated" : 266,
+  "count" : 491,
+  "uniques" : 284,
   "clones" : [
-    {
-      "timestamp": "2022-08-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-05T00:00:00Z",
       "count": 4,
