@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 25,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-08-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-05T00:00:00Z",
       "count": 4,
